--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.12.0",
+    "axios": "^1.3.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.3"
-    ""
   }
 }
