--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.12.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3"
   }
 }
