--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.12",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
