--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "eslint",
     "install": "cd client && npm install && cd ../server && npm install",
-    "develop": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "client": "cd client && npm run dev",
     "server": "cd server && npm run watch",
     "start": "cd server && npm run start",
@@ -26,5 +26,8 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
     "prettier": "^2.0.5"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.12.4"
   }
 }
