--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint",
+    "seed": "cd server && npm run seed",
     "install": "cd client && npm install && cd ../server && npm install",
     "develop": "concurrently \"npm run server\" \"npm run client\"",
     "client": "cd client && npm run dev",
