--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "seed": "cd seeds && node seed.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon server",
     "start": "node server"
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.12.0",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
