--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0"
+    "@mui/material": "^5.12.1",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3"
   }
 }
