--- a/package.json
+++ b/package.json
@@ -28,13 +28,9 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
-
     "@mui/material": "^5.12.1",
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3"
-
-    "axios": "^1.3.5",
-    "bcrypt": "^5.1.0"
-
+    "dotenv": "^16.0.3",
+    "axios": "^1.3.5"
   }
 }
