--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "@stripe/react-stripe-js": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
