--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "@mui/material": "^5.12.1",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "axios": "^1.3.5"
+    "dotenv": "^16.0.3"
   }
 }
