--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "apollo-server-express": "^3.12.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
