--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "test": "eslint",
     "seed": "cd server && npm run seed",
     "install": "cd client && npm install && cd ../server && npm install",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "client": "cd client && npm run dev",
-    "server": "cd server && npm run watch",
+    "dev": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\"",
     "start": "cd server && npm run start",
     "build": "cd client && npm run build"
   },
