--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines":{
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
     "concurrently": "^8.0.1",
     "eslint": "^7.9.0",
