--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,14 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@stripe/react-stripe-js": "^1.16.5",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.2"
   }
 }
